# multipurpose-web-tokens

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
multipurpose_web_tokens/: exceptions.py  mwt.py
mwt/: __init__.py  mwt.py  tokens_purpose.py  utils.py
tests/: conftest.py  mwt_test.py
